<resources>
    <string name="app_name">LoyaltyApp</string>
    <string name="my_app_id">loyaltyapp-vfamf</string>
    <string name="welcome">Hello! Welcome to the Rewards App. Let\'s create an account.</string>
    <string name="wb">Welcome Back!</string>
    <string name="Prompt_phone">Please enter your phone number, then hand back to the cashier after tapping \"Next\".</string>
    <string name="UserName">Name</string>
    <string name="biz">Business</string>
    <string name="Dollar_Sign">$</string>
    <string name="Amount">Enter the amount of the purchase.</string>
    <string name="Status">Status</string>
    <string name="user">Customer: </string>
    <string name="totPts">Total Points: </string>
    <string name="avPts">Available Points: </string>
    <string name="progress">% towards Reward</string>
    <string name="already">Already have an account?</string>
    <string name="SignIn">Sign In</string>
    <string name="photoup">Choose Photo</string>
    <string name="bizN">Business Name</string>
    <string name="bizSt">Street Address</string>
    <string name="bizC">City</string>
    <string name="bizS">State</string>
    <string name="zip">Zip Code</string>
    <string name="num">Phone Number</string>
    <string name="em">Email</string>
    <string name="pw">Password</string>
    <string name="eex">example@ex.com</string>
    <string name="numex">(XXX)-XXX-XXXX</string>
    <string name="next">Next</string>
    <string name="bType">Business Type</string>

    <string-array name="BizType">
        <item>Restaurant</item>
        <item>Cafe</item>
        <item>Bakery</item>
        <item>Chain</item>
    </string-array>

</resources>
